Get started section outlines and few articles.

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,5 +1,43 @@
 /* your custom css */
 
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
+
+html,
+body {
+  font-family: "Roboto", sans-serif;
+  color: rgb(59, 69, 78);
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+}
+
+p {
+  line-height: 26px;
+  font-weight: 400;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 500;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.navigationSlider .slidingNav ul li a {
+  font-weight: 400;
+}
+
+.edit-page-link {
+  font-weight: 500;
+}
+
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
 }
 
@@ -22,36 +60,4 @@
 
 .fixedHeaderContainer header img {
   height: 25px;
-}
-
-.projectTagline {
-  color: var(--color-primary);
-  font-size: 150%;
-  margin-top: 0;
-}
-
-.projectTagline small {
-  display: block;
-  color: var(--color-primary);
-  font-size: 50%;
-  margin-top: 10px;
-}
-
-.section-title {
-  text-align: center;
-  font-size: 200%;
-  font-weight: 700;
-}
-
-.container.paddingTop {
-  padding-top: 10px;
-}
-
-.nav-footer .fbOpenSource {
-  width: 100%;
-  text-align: center;
-}
-
-.mainContainer {
-  padding-bottom: 0;
 }
