Visual styles and CMS Guides overview article,

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -12,9 +12,14 @@ body {
   text-rendering: optimizeLegibility;
 }
 
-p {
-  line-height: 26px;
+p, li {
+  font-size: 17px;
+  line-height: 29px;
   font-weight: 400;
+}
+
+li{
+    margin-top: 10px;
 }
 
 h1,
@@ -26,12 +31,39 @@ h6 {
   font-weight: 500;
 }
 
+h2{
+    border-top: 1px solid #ececec;
+    margin-top: 44px;
+    padding-top: 40px;
+    line-height: 1.2;
+}
+
+h3{
+    margin-top: 45px;
+}
+
+a{
+    letter-spacing: 0.25px;
+}
+
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
+}
+
+.navigationSlider .slidingNav ul li{
+    margin-top: 0px;
 }
 
 .navigationSlider .slidingNav ul li a {
-  font-weight: 400;
+    font-weight: 400;
+}
+
+.toc .toggleNav ul li a{
+    padding: 0;
+}
+
+strong, b{
+    font-weight: 500;
 }
 
 .edit-page-link {
@@ -55,9 +87,39 @@ a:hover {
 
 :root {
   --color-primary: #f75b34;
-  --color-secondary: #ffffff;
+  --color-secondary: #65BCB0;
 }
 
 .fixedHeaderContainer header img {
   height: 25px;
+}
+
+ol {
+    margin: 30px 0 30px 20px;
+    padding: 0;
+}
+ol li {
+    position: relative;
+    margin-left: 25px;
+    list-style: none;
+    counter-increment: a;
+}
+
+ol li:before {
+    position: absolute;
+    color: #fff;
+    background: var(--color-secondary);
+    width: 18px;
+    height: 18px;
+    line-height: 17px;
+    font-size: 12px;
+    display: block;
+    content: counter(a);
+    left: -45px;
+    top: 7px;
+    text-align: center;
+    font-weight: 400;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke: .02em;
+    vertical-align: initial;
 }
