Page list documentation.

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -12,14 +12,15 @@ body {
   text-rendering: optimizeLegibility;
 }
 
-p, li {
+p,
+li {
   font-size: 17px;
   line-height: 29px;
   font-weight: 400;
 }
 
-li{
-    margin-top: 10px;
+li {
+  margin-top: 10px;
 }
 
 h1,
@@ -28,39 +29,40 @@ h3 {
   font-weight: 500;
 }
 
-h2{
-    border-top: 1px solid #ececec;
-    margin-top: 44px;
-    padding-top: 40px;
-    line-height: 1.2;
+h2 {
+  border-top: 1px solid #ececec;
+  margin-top: 44px;
+  padding-top: 40px;
+  line-height: 1.2;
 }
 
-h3{
-    margin-top: 45px;
+h3 {
+  margin-top: 45px;
 }
 
-a{
-    letter-spacing: 0.25px;
+a {
+  letter-spacing: 0.25px;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
-.navigationSlider .slidingNav ul li{
-    margin-top: 0px;
+.navigationSlider .slidingNav ul li {
+  margin-top: 0px;
 }
 
 .navigationSlider .slidingNav ul li a {
-    font-weight: 400;
+  font-weight: 400;
 }
 
-.toc .toggleNav ul li a{
-    padding: 0;
+.toc .toggleNav ul li a {
+  padding: 0;
 }
 
-strong, b{
-    font-weight: 600;
+strong,
+b {
+  font-weight: 600;
 }
 
 .edit-page-link {
@@ -84,7 +86,7 @@ strong, b{
 
 :root {
   --color-primary: #f75b34;
-  --color-secondary: #65BCB0;
+  --color-secondary: #9013fe;
 }
 
 .fixedHeaderContainer header img {
@@ -92,31 +94,39 @@ strong, b{
 }
 
 ol {
-    margin: 30px 0 30px 20px;
-    padding: 0;
+  margin: 30px 0 30px 30px;
+  padding: 0;
 }
 ol li {
-    position: relative;
-    margin-left: 25px;
-    list-style: none;
-    counter-increment: a;
+  position: relative;
+  margin-left: 15px;
+  list-style: none;
+  counter-increment: a;
+  padding-top: 6px;
 }
 
 ol li:before {
-    position: absolute;
-    color: #fff;
-    background: var(--color-secondary);
-    width: 18px;
-    height: 18px;
-    line-height: 17px;
-    font-size: 12px;
-    display: block;
-    content: counter(a);
-    left: -45px;
-    top: 7px;
-    text-align: center;
-    font-weight: 400;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-stroke: .02em;
-    vertical-align: initial;
+  position: absolute;
+  color: #fff;
+  background: var(--color-secondary);
+  width: 26px;
+  height: 26px;
+  line-height: 24px;
+  font-size: 14px;
+  display: block;
+  content: counter(a);
+  left: -45px;
+  top: 8px;
+  text-align: center;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke: 0.02em;
+  vertical-align: initial;
+}
+
+.post img {
+  max-width: 100%;
+  margin: 20px auto 40px;
+  border: 1px solid #e1e2e4;
+  border-radius: 3px;
 }
