--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -127,6 +127,7 @@ ol li:before {
 .post img {
   max-width: 100%;
   margin: 20px auto 40px;
-  border: 1px solid #e1e2e4;
-  border-radius: 3px;
+  border: 1px solid #E6E6E6;
+  box-shadow: 0 2px 4px 0 rgba(209,209,209,0.50);
+  border-radius: 5px;
 }
