--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -10,6 +10,29 @@ body {
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
+  background-color: #f8fafc;
+}
+
+.container.mainContainer{
+  background-color: #fff;
+  border: 1px solid #E6E6E6;
+  box-shadow: 0 4px 8px 0 rgba(209,209,209,0.50);
+  padding: 50px;
+  margin-bottom: 0px;
+  border-radius: 5px;
+  margin-top: -5px;
+}
+
+.container.mainContainer .post{
+  border-bottom: 1px solid #ececec;
+  padding-bottom: 25px;
+  margin-bottom: 40px;
+}
+
+.container.mainContainer .docs-prevnext{
+  margin-bottom: 0px;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #ececec;
 }
 
 p,
@@ -48,16 +71,49 @@ a:hover {
   text-decoration: underline;
 }
 
+.navGroup ul{
+  position: relative;
+}
+
+.navGroup ul:before{
+  content: "";
+  display: block;
+  position: absolute;
+  top: 7px;
+  left: 0;
+  bottom: 7px;
+  width: 1px;
+  background: #e5eff5;
+}
+
+.toc .navGroup ul li a{
+  position: relative;
+  display: block;
+  padding: 6px 0 6px 15px;
+}
+
+.navGroup ul li.navListItemActive a{
+  font-weight: bold;
+}
+
+.navGroup ul li.navListItemActive a:before{
+  content: "";
+  display: block;
+  position: absolute;
+  height: 26px;
+  top: 7px;
+  left: -8px;
+  width: 4px;
+  background: var(--color-primary);
+  border-radius: 0;
+}
+
 .navigationSlider .slidingNav ul li {
   margin-top: 0px;
 }
 
 .navigationSlider .slidingNav ul li a {
   font-weight: 400;
-}
-
-.toc .toggleNav ul li a {
-  padding: 0;
 }
 
 strong,
@@ -70,6 +126,7 @@ b {
 }
 
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
+
 }
 
 @media only screen and (min-width: 1024px) {
@@ -89,8 +146,38 @@ b {
   --color-secondary: #9013fe;
 }
 
+.fixedHeaderContainer {
+  box-shadow: 0 0 3px rgba(0,0,0,.03), 0 3px 10px rgba(0,0,0,.05);
+  background-color: #fff;
+}
+
+.fixedHeaderContainer header{
+  padding: 5px 0;
+}
+
 .fixedHeaderContainer header img {
-  height: 25px;
+  height: 32px;
+}
+
+.navigationSlider .slidingNav ul li a{
+  color: #000;
+  font-weight: 300;
+  font-size: 14px;
+  border-bottom: 4px solid transparent;
+}
+
+.navigationSlider .slidingNav ul li a:hover{
+  border-bottom: 4px solid #ebebeb;
+  background-color: transparent;
+  text-decoration: none;
+  color: #000;
+}
+
+.navigationSlider .slidingNav ul li.siteNavGroupActive a{
+  background-color: #fff;
+  border-bottom: 4px solid var(--color-primary);
+  color: #000;
+  font-weight: 500;
 }
 
 ol {
@@ -130,4 +217,44 @@ ol li:before {
   border: 1px solid #E6E6E6;
   box-shadow: 0 2px 4px 0 rgba(209,209,209,0.50);
   border-radius: 5px;
+}
+
+.nav-footer .fbOpenSource{
+  width: 120px;
+}
+
+.feedback-box{
+  border: 1px solid #E6E6E6;
+  border-top-color: transparent;
+  box-shadow: 0 4px 8px 0 rgba(209,209,209,0.50);
+  border-radius: 5px;
+  display: flex;
+  padding: 25px 50px 50px 50px;
+  text-align: left;
+  margin: -5px auto 50px auto;
+  background-color: #fff;
+  width: 784px;
+  flex-direction: column;
+  text-align: center;
+}
+
+.feedback-box h3{
+  margin-top: 0px;
+}
+
+@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
+  .container.mainContainer{
+    padding: 15px;
+    padding-top: 80px;
+  }
+
+  .feedback-box{
+    margin: 25px;
+    max-width: calc(100vw - 50px);
+    box-sizing: border-box;
+  }
+
+  .fixedHeaderContainer header a{
+    margin: 0 auto;
+  }
 }
