--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -2,6 +2,11 @@
 
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
 
+:root {
+  --color-primary: #f75b34;
+  --color-secondary: #9013fe;
+}
+
 html,
 body {
   font-family: "Roboto", sans-serif;
@@ -31,8 +36,6 @@ body {
 
 .container.mainContainer .docs-prevnext{
   margin-bottom: 0px;
-  padding-bottom: 40px;
-  border-bottom: 1px solid #ececec;
 }
 
 p,
@@ -141,11 +144,6 @@ b {
 @media only screen and (min-width: 1500px) {
 }
 
-:root {
-  --color-primary: #f75b34;
-  --color-secondary: #9013fe;
-}
-
 .fixedHeaderContainer {
   box-shadow: 0 0 3px rgba(0,0,0,.03), 0 3px 10px rgba(0,0,0,.05);
   background-color: #fff;
@@ -223,23 +221,135 @@ ol li:before {
   width: 120px;
 }
 
+.nav-footer a.fbOpenSource{
+  display: inline-block;
+  text-align: right !important;
+}
+
 .feedback-box{
   border: 1px solid #E6E6E6;
   border-top-color: transparent;
   box-shadow: 0 4px 8px 0 rgba(209,209,209,0.50);
   border-radius: 5px;
   display: flex;
-  padding: 25px 50px 50px 50px;
+  padding: 50px;
   text-align: left;
-  margin: -5px auto 50px auto;
+  margin: 50px auto 50px auto;
   background-color: #fff;
-  width: 784px;
-  flex-direction: column;
+  max-width: 784px;
+  width: 54%;
+  flex-direction: row;
+  align-items: center;
+  font-size: 16px;
+}
+
+.feedback-box .message{
+  text-align: left;
+  padding-right: 50px;
+}
+
+.feedback-box .button{
   text-align: center;
+}
+
+.feedback-box .button:hover a{
+  color: #fff;
+  text-decoration: none;
 }
 
 .feedback-box h3{
   margin-top: 0px;
+  font-size: 1.2rem;
+}
+
+.feedback-box p{
+  font-size: 0.8rem;
+  color: #717171;
+  line-height: 1.4rem;
+}
+
+.feedback-box a{
+  font-size: 0.8rem;
+}
+
+.sub-footer-box{
+  border-top: 1px solid #F3F3F3;
+  display: flex;
+  padding: 25px 50px 25px 50px;
+  background-color: #fff;
+  width: 100%;
+  flex-direction: row;
+  text-align: center;
+  font-size: 16px;
+  align-items: center;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.sub-footer-box .inner-box{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: left;
+  max-width: 540px;
+}
+
+.sub-footer-box .inner-box:first-child{
+  padding-right: 50px;;
+  border-right: 1px solid #F3F3F3;
+}
+
+.sub-footer-box .inner-box h3{
+  margin-top: 0px;
+  font-size: 1.2rem;
+}
+
+.sub-footer-box .inner-box p{
+  font-size: 0.8rem;
+  color: #717171;
+  line-height: 1.4rem;
+}
+
+.sub-footer-box .inner-box img{
+  margin-right: 25px;
+  opacity: 0.75;
+  transition: opacity 0.3s;
+}
+
+.sub-footer-box .inner-box:last-child{
+  margin-left: 25px;
+  padding-left: 25px;
+}
+
+.sub-footer-box .inner-box a:hover{
+  text-decoration: none;
+}
+
+.sub-footer-box .inner-box a h3{
+  color: #717171;
+  transition: color 0.3s;
+}
+
+.sub-footer-box .inner-box a:hover h3{
+  color: #000;
+}
+
+.sub-footer-box .inner-box:hover img{
+  opacity: 1;
+}
+
+.nav-footer .copyright{
+  text-align: right
+}
+
+@media only screen and (max-width: 1023px){
+  .feedback-box{
+    width: 100%;
+    max-width: calc(100% - 50px);
+    margin-left: 25px;
+    margin-right: 25px;
+    box-sizing: border-box;
+  }
 }
 
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
@@ -252,6 +362,23 @@ ol li:before {
     margin: 25px;
     max-width: calc(100vw - 50px);
     box-sizing: border-box;
+    flex-direction: column;
+  }
+
+  .sub-footer-box{
+    flex-direction: column;
+  }
+
+  .sub-footer-box .inner-box:first-child, .sub-footer-box .inner-box:last-child{
+    flex-direction: column;
+    margin: 0px;
+    padding: 15px;
+    border: none;
+    text-align: center;
+  }
+
+  .sub-footer-box .inner-box img{
+    margin: 0;
   }
 
   .fixedHeaderContainer header a{
