Copy update, footer margin fix

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -292,10 +292,11 @@ ol li:before {
   align-items: center;
   text-align: left;
   max-width: 540px;
+  flex-basis: 100%;
 }
 
 .sub-footer-box .inner-box:first-child{
-  padding-right: 50px;;
+  padding-right: 25px;;
   border-right: 1px solid #F3F3F3;
 }
 
@@ -317,7 +318,6 @@ ol li:before {
 }
 
 .sub-footer-box .inner-box:last-child{
-  margin-left: 25px;
   padding-left: 25px;
 }
 
