Added media to enrich cms basic pages

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -18,23 +18,23 @@ body {
   background-color: #f8fafc;
 }
 
-.container.mainContainer{
+.container.mainContainer {
   background-color: #fff;
-  border: 1px solid #E6E6E6;
-  box-shadow: 0 4px 8px 0 rgba(209,209,209,0.50);
+  border: 1px solid #e6e6e6;
+  box-shadow: 0 4px 8px 0 rgba(209, 209, 209, 0.5);
   padding: 50px;
   margin-bottom: 0px;
   border-radius: 5px;
   margin-top: -5px;
 }
 
-.container.mainContainer .post{
+.container.mainContainer .post {
   border-bottom: 1px solid #ececec;
   padding-bottom: 25px;
   margin-bottom: 40px;
 }
 
-.container.mainContainer .docs-prevnext{
+.container.mainContainer .docs-prevnext {
   margin-bottom: 0px;
 }
 
@@ -74,11 +74,11 @@ a:hover {
   text-decoration: underline;
 }
 
-.navGroup ul{
+.navGroup ul {
   position: relative;
 }
 
-.navGroup ul:before{
+.navGroup ul:before {
   content: "";
   display: block;
   position: absolute;
@@ -89,17 +89,17 @@ a:hover {
   background: #e5eff5;
 }
 
-.toc .navGroup ul li a{
+.toc .navGroup ul li a {
   position: relative;
   display: block;
   padding: 6px 0 6px 15px;
 }
 
-.navGroup ul li.navListItemActive a{
+.navGroup ul li.navListItemActive a {
   font-weight: bold;
 }
 
-.navGroup ul li.navListItemActive a:before{
+.navGroup ul li.navListItemActive a:before {
   content: "";
   display: block;
   position: absolute;
@@ -129,7 +129,6 @@ b {
 }
 
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
-
 }
 
 @media only screen and (min-width: 1024px) {
@@ -145,11 +144,11 @@ b {
 }
 
 .fixedHeaderContainer {
-  box-shadow: 0 0 3px rgba(0,0,0,.03), 0 3px 10px rgba(0,0,0,.05);
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.03), 0 3px 10px rgba(0, 0, 0, 0.05);
   background-color: #fff;
 }
 
-.fixedHeaderContainer header{
+.fixedHeaderContainer header {
   padding: 5px 0;
 }
 
@@ -157,21 +156,21 @@ b {
   height: 32px;
 }
 
-.navigationSlider .slidingNav ul li a{
+.navigationSlider .slidingNav ul li a {
   color: #000;
   font-weight: 300;
   font-size: 14px;
   border-bottom: 4px solid transparent;
 }
 
-.navigationSlider .slidingNav ul li a:hover{
+.navigationSlider .slidingNav ul li a:hover {
   border-bottom: 4px solid #ebebeb;
   background-color: transparent;
   text-decoration: none;
   color: #000;
 }
 
-.navigationSlider .slidingNav ul li.siteNavGroupActive a{
+.navigationSlider .slidingNav ul li.siteNavGroupActive a {
   background-color: #fff;
   border-bottom: 4px solid var(--color-primary);
   color: #000;
@@ -212,24 +211,33 @@ ol li:before {
 .post img {
   max-width: 100%;
   margin: 20px auto 40px;
-  border: 1px solid #E6E6E6;
-  box-shadow: 0 2px 4px 0 rgba(209,209,209,0.50);
+  border: 1px solid #e6e6e6;
+  box-shadow: 0 2px 4px 0 rgba(209, 209, 209, 0.5);
   border-radius: 5px;
 }
 
-.nav-footer .fbOpenSource{
+.post video {
+  max-width: 100%;
+  margin: 20px auto 40px auto;
+  display: block;
+  border: 1px solid #e6e6e6;
+  box-shadow: 0 2px 4px 0 rgba(209, 209, 209, 0.5);
+  border-radius: 5px;
+}
+
+.nav-footer .fbOpenSource {
   width: 120px;
 }
 
-.nav-footer a.fbOpenSource{
+.nav-footer a.fbOpenSource {
   display: inline-block;
   text-align: right !important;
 }
 
-.feedback-box{
-  border: 1px solid #E6E6E6;
+.feedback-box {
+  border: 1px solid #e6e6e6;
   border-top-color: transparent;
-  box-shadow: 0 4px 8px 0 rgba(209,209,209,0.50);
+  box-shadow: 0 4px 8px 0 rgba(209, 209, 209, 0.5);
   border-radius: 5px;
   display: flex;
   padding: 50px;
@@ -243,37 +251,37 @@ ol li:before {
   font-size: 16px;
 }
 
-.feedback-box .message{
+.feedback-box .message {
   text-align: left;
   padding-right: 50px;
 }
 
-.feedback-box .button{
+.feedback-box .button {
   text-align: center;
 }
 
-.feedback-box .button:hover a{
+.feedback-box .button:hover a {
   color: #fff;
   text-decoration: none;
 }
 
-.feedback-box h3{
+.feedback-box h3 {
   margin-top: 0px;
   font-size: 1.2rem;
 }
 
-.feedback-box p{
+.feedback-box p {
   font-size: 0.8rem;
   color: #717171;
   line-height: 1.4rem;
 }
 
-.feedback-box a{
+.feedback-box a {
   font-size: 0.8rem;
 }
 
-.sub-footer-box{
-  border-top: 1px solid #F3F3F3;
+.sub-footer-box {
+  border-top: 1px solid #f3f3f3;
   display: flex;
   padding: 25px 50px 25px 50px;
   background-color: #fff;
@@ -286,7 +294,7 @@ ol li:before {
   justify-content: center;
 }
 
-.sub-footer-box .inner-box{
+.sub-footer-box .inner-box {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -295,55 +303,55 @@ ol li:before {
   flex-basis: 100%;
 }
 
-.sub-footer-box .inner-box:first-child{
-  padding-right: 25px;;
-  border-right: 1px solid #F3F3F3;
+.sub-footer-box .inner-box:first-child {
+  padding-right: 25px;
+  border-right: 1px solid #f3f3f3;
 }
 
-.sub-footer-box .inner-box h3{
+.sub-footer-box .inner-box h3 {
   margin-top: 0px;
   font-size: 1.2rem;
 }
 
-.sub-footer-box .inner-box p{
+.sub-footer-box .inner-box p {
   font-size: 0.8rem;
   color: #717171;
   line-height: 1.4rem;
 }
 
-.sub-footer-box .inner-box img{
+.sub-footer-box .inner-box img {
   margin-right: 25px;
   opacity: 0.75;
   transition: opacity 0.3s;
 }
 
-.sub-footer-box .inner-box:last-child{
+.sub-footer-box .inner-box:last-child {
   padding-left: 25px;
 }
 
-.sub-footer-box .inner-box a:hover{
+.sub-footer-box .inner-box a:hover {
   text-decoration: none;
 }
 
-.sub-footer-box .inner-box a h3{
+.sub-footer-box .inner-box a h3 {
   color: #717171;
   transition: color 0.3s;
 }
 
-.sub-footer-box .inner-box a:hover h3{
+.sub-footer-box .inner-box a:hover h3 {
   color: #000;
 }
 
-.sub-footer-box .inner-box:hover img{
+.sub-footer-box .inner-box:hover img {
   opacity: 1;
 }
 
-.nav-footer .copyright{
-  text-align: right
+.nav-footer .copyright {
+  text-align: right;
 }
 
-@media only screen and (max-width: 1023px){
-  .feedback-box{
+@media only screen and (max-width: 1023px) {
+  .feedback-box {
     width: 100%;
     max-width: calc(100% - 50px);
     margin-left: 25px;
@@ -353,23 +361,24 @@ ol li:before {
 }
 
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
-  .container.mainContainer{
+  .container.mainContainer {
     padding: 15px;
     padding-top: 80px;
   }
 
-  .feedback-box{
+  .feedback-box {
     margin: 25px;
     max-width: calc(100vw - 50px);
     box-sizing: border-box;
     flex-direction: column;
   }
 
-  .sub-footer-box{
+  .sub-footer-box {
     flex-direction: column;
   }
 
-  .sub-footer-box .inner-box:first-child, .sub-footer-box .inner-box:last-child{
+  .sub-footer-box .inner-box:first-child,
+  .sub-footer-box .inner-box:last-child {
     flex-direction: column;
     margin: 0px;
     padding: 15px;
@@ -377,11 +386,11 @@ ol li:before {
     text-align: center;
   }
 
-  .sub-footer-box .inner-box img{
+  .sub-footer-box .inner-box img {
     margin: 0;
   }
 
-  .fixedHeaderContainer header a{
+  .fixedHeaderContainer header a {
     margin: 0 auto;
   }
 }
