Added player buttons and removed designer tutorials

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -218,11 +218,29 @@ ol li:before {
 
 .post video {
   max-width: 100%;
+  height: auto   !important;
   margin: 20px auto 40px auto;
   display: block;
   border: 1px solid #e6e6e6;
   box-shadow: 0 2px 4px 0 rgba(209, 209, 209, 0.5);
   border-radius: 5px;
+}
+
+.post .video-container{
+  position: relative;
+}
+
+.post .video-container::after{
+  content: url('/img/play-btn.svg'); 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  cursor: pointer;
+}
+
+.post .video-container.playing::after{
+  display: none;
 }
 
 .nav-footer .fbOpenSource {
