Updated to docusaurus 2.0

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,211 +1,13 @@
 /* your custom css */
 
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
-
 :root {
-  --color-primary: #f75b34;
-  --color-secondary: #9013fe;
-}
-
-html,
-body {
-  font-family: "Roboto", sans-serif;
-  color: rgb(59, 69, 78);
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  background-color: #f8fafc;
-}
-
-.container.mainContainer {
-  background-color: #fff;
-  border: 1px solid #e6e6e6;
-  box-shadow: 0 4px 8px 0 rgba(209, 209, 209, 0.5);
-  padding: 50px;
-  margin-bottom: 0px;
-  border-radius: 5px;
-  margin-top: -5px;
-}
-
-.container.mainContainer .post {
-  border-bottom: 1px solid #ececec;
-  padding-bottom: 25px;
-  margin-bottom: 40px;
-}
-
-.container.mainContainer .docs-prevnext {
-  margin-bottom: 0px;
-}
-
-p,
-li {
-  font-size: 17px;
-  line-height: 29px;
-  font-weight: 400;
-}
-
-li {
-  margin-top: 10px;
-}
-
-h1,
-h2,
-h3 {
-  font-weight: 500;
-}
-
-h2 {
-  border-top: 1px solid #ececec;
-  margin-top: 44px;
-  padding-top: 40px;
-  line-height: 1.2;
-}
-
-h3 {
-  margin-top: 45px;
-}
-
-a {
-  letter-spacing: 0.25px;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.navGroup ul {
-  position: relative;
-}
-
-.navGroup ul:before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 7px;
-  left: 0;
-  bottom: 7px;
-  width: 1px;
-  background: #e5eff5;
-}
-
-.toc .navGroup ul li a {
-  position: relative;
-  display: block;
-  padding: 6px 0 6px 15px;
-}
-
-.navGroup ul li.navListItemActive a {
-  font-weight: bold;
-}
-
-.navGroup ul li.navListItemActive a:before {
-  content: "";
-  display: block;
-  position: absolute;
-  height: 26px;
-  top: 7px;
-  left: -8px;
-  width: 4px;
-  background: var(--color-primary);
-  border-radius: 0;
-}
-
-.navigationSlider .slidingNav ul li {
-  margin-top: 0px;
-}
-
-.navigationSlider .slidingNav ul li a {
-  font-weight: 400;
-}
-
-strong,
-b {
-  font-weight: 600;
-}
-
-.edit-page-link {
-  font-weight: 500;
-}
-
-@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
-}
-
-@media only screen and (min-width: 1024px) {
-}
-
-@media only screen and (max-width: 1023px) {
-}
-
-@media only screen and (min-width: 1400px) {
-}
-
-@media only screen and (min-width: 1500px) {
-}
-
-.fixedHeaderContainer {
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.03), 0 3px 10px rgba(0, 0, 0, 0.05);
-  background-color: #fff;
-}
-
-.fixedHeaderContainer header {
-  padding: 5px 0;
-}
-
-.fixedHeaderContainer header img {
-  height: 32px;
-}
-
-.navigationSlider .slidingNav ul li a {
-  color: #000;
-  font-weight: 300;
-  font-size: 14px;
-  border-bottom: 4px solid transparent;
-}
-
-.navigationSlider .slidingNav ul li a:hover {
-  border-bottom: 4px solid #ebebeb;
-  background-color: transparent;
-  text-decoration: none;
-  color: #000;
-}
-
-.navigationSlider .slidingNav ul li.siteNavGroupActive a {
-  background-color: #fff;
-  border-bottom: 4px solid var(--color-primary);
-  color: #000;
-  font-weight: 500;
-}
-
-ol {
-  margin: 30px 0 30px 30px;
-  padding: 0;
-}
-ol li {
-  position: relative;
-  margin-left: 15px;
-  list-style: none;
-  counter-increment: a;
-  padding-top: 6px;
-}
-
-ol li:before {
-  position: absolute;
-  color: #fff;
-  background: var(--color-secondary);
-  width: 26px;
-  height: 26px;
-  line-height: 24px;
-  font-size: 14px;
-  display: block;
-  content: counter(a);
-  left: -45px;
-  top: 8px;
-  text-align: center;
-  font-weight: 400;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-stroke: 0.02em;
-  vertical-align: initial;
+  --ifm-color-primary: #09d3ac;
+  --ifm-color-primary-dark: rgb(8, 190, 155);
+  --ifm-color-primary-darker: rgb(8, 179, 146);
+  --ifm-color-primary-darkest: rgb(6, 148, 120);
+  --ifm-color-primary-light: rgb(46, 218, 184);
+  --ifm-color-primary-lighter: rgb(83, 224, 197);
+  --ifm-color-primary-lightest: rgb(132, 233, 214);
 }
 
 .post img {
@@ -241,174 +43,4 @@ ol li:before {
 
 .post .video-container.playing::after{
   display: none;
-}
-
-.nav-footer .fbOpenSource {
-  width: 120px;
-}
-
-.nav-footer a.fbOpenSource {
-  display: inline-block;
-  text-align: right !important;
-}
-
-.feedback-box {
-  border: 1px solid #e6e6e6;
-  border-top-color: transparent;
-  box-shadow: 0 4px 8px 0 rgba(209, 209, 209, 0.5);
-  border-radius: 5px;
-  display: flex;
-  padding: 50px;
-  text-align: left;
-  margin: 50px auto 50px auto;
-  background-color: #fff;
-  max-width: 784px;
-  width: 54%;
-  flex-direction: row;
-  align-items: center;
-  font-size: 16px;
-}
-
-.feedback-box .message {
-  text-align: left;
-  padding-right: 50px;
-}
-
-.feedback-box .button {
-  text-align: center;
-}
-
-.feedback-box .button:hover a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.feedback-box h3 {
-  margin-top: 0px;
-  font-size: 1.2rem;
-}
-
-.feedback-box p {
-  font-size: 0.8rem;
-  color: #717171;
-  line-height: 1.4rem;
-}
-
-.feedback-box a {
-  font-size: 0.8rem;
-}
-
-.sub-footer-box {
-  border-top: 1px solid #f3f3f3;
-  display: flex;
-  padding: 25px 50px 25px 50px;
-  background-color: #fff;
-  width: 100%;
-  flex-direction: row;
-  text-align: center;
-  font-size: 16px;
-  align-items: center;
-  margin: 0 auto;
-  justify-content: center;
-}
-
-.sub-footer-box .inner-box {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  text-align: left;
-  max-width: 540px;
-  flex-basis: 100%;
-}
-
-.sub-footer-box .inner-box:first-child {
-  padding-right: 25px;
-  border-right: 1px solid #f3f3f3;
-}
-
-.sub-footer-box .inner-box h3 {
-  margin-top: 0px;
-  font-size: 1.2rem;
-}
-
-.sub-footer-box .inner-box p {
-  font-size: 0.8rem;
-  color: #717171;
-  line-height: 1.4rem;
-}
-
-.sub-footer-box .inner-box img {
-  margin-right: 25px;
-  opacity: 0.75;
-  transition: opacity 0.3s;
-}
-
-.sub-footer-box .inner-box:last-child {
-  padding-left: 25px;
-}
-
-.sub-footer-box .inner-box a:hover {
-  text-decoration: none;
-}
-
-.sub-footer-box .inner-box a h3 {
-  color: #717171;
-  transition: color 0.3s;
-}
-
-.sub-footer-box .inner-box a:hover h3 {
-  color: #000;
-}
-
-.sub-footer-box .inner-box:hover img {
-  opacity: 1;
-}
-
-.nav-footer .copyright {
-  text-align: right;
-}
-
-@media only screen and (max-width: 1023px) {
-  .feedback-box {
-    width: 100%;
-    max-width: calc(100% - 50px);
-    margin-left: 25px;
-    margin-right: 25px;
-    box-sizing: border-box;
-  }
-}
-
-@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
-  .container.mainContainer {
-    padding: 15px;
-    padding-top: 80px;
-  }
-
-  .feedback-box {
-    margin: 25px;
-    max-width: calc(100vw - 50px);
-    box-sizing: border-box;
-    flex-direction: column;
-  }
-
-  .sub-footer-box {
-    flex-direction: column;
-  }
-
-  .sub-footer-box .inner-box:first-child,
-  .sub-footer-box .inner-box:last-child {
-    flex-direction: column;
-    margin: 0px;
-    padding: 15px;
-    border: none;
-    text-align: center;
-  }
-
-  .sub-footer-box .inner-box img {
-    margin: 0;
-  }
-
-  .fixedHeaderContainer header a {
-    margin: 0 auto;
-  }
 }
