Fixing gitignore rules

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,46 +1,29 @@
 /* your custom css */
 
 :root {
-  --ifm-color-primary: #09d3ac;
-  --ifm-color-primary-dark: rgb(8, 190, 155);
-  --ifm-color-primary-darker: rgb(8, 179, 146);
-  --ifm-color-primary-darkest: rgb(6, 148, 120);
-  --ifm-color-primary-light: rgb(46, 218, 184);
-  --ifm-color-primary-lighter: rgb(83, 224, 197);
-  --ifm-color-primary-lightest: rgb(132, 233, 214);
-}
+    --ifm-color-primary: #e86337;
+    --ifm-color-primary-dark: #d15932;
+    --ifm-color-primary-darker: #ba4f2c;
+    --ifm-color-primary-darkest: #a24527;
+    --ifm-color-primary-light: #ea734b;
+    --ifm-color-primary-lighter: #ed825f;
+    --ifm-color-primary-lightest: #ef9273;
+  }
 
-.post img {
-  max-width: 100%;
-  margin: 20px auto 40px;
-  border: 1px solid #e6e6e6;
-  box-shadow: 0 2px 4px 0 rgba(209, 209, 209, 0.5);
-  border-radius: 5px;
-}
+  html[data-theme='dark'] {
+    --ifm-background-color: #1f2227;
+    --ifm-background-surface-color: #33363b;
+  }
 
-.post video {
-  max-width: 100%;
-  height: auto   !important;
-  margin: 20px auto 40px auto;
-  display: block;
-  border: 1px solid #e6e6e6;
-  box-shadow: 0 2px 4px 0 rgba(209, 209, 209, 0.5);
-  border-radius: 5px;
-}
 
-.post .video-container{
-  position: relative;
-}
-
-.post .video-container::after{
-  content: url('/img/play-btn.svg'); 
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
-  cursor: pointer;
-}
-
-.post .video-container.playing::after{
-  display: none;
-}
+  @media screen and (max-width: 996px) {
+    :root {
+      --ifm-font-size-base: 15px;
+    }
+  }
+  
+  @media screen and (min-width: 997px) {
+    :root {
+      --ifm-font-size-base: 17px;
+    }
+  }
