Code element color adjustments

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -8,11 +8,13 @@
     --ifm-color-primary-light: #ea734b;
     --ifm-color-primary-lighter: #ed825f;
     --ifm-color-primary-lightest: #ef9273;
+    --ifm-code-background: #F0EAE4;
   }
 
   html[data-theme='dark'] {
     --ifm-background-color: #1f2227;
     --ifm-background-surface-color: #33363b;
+    --ifm-code-background: #5652B1;
   }
 
 
