--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -29,3 +29,9 @@
       --ifm-font-size-base: 17px;
     }
   }
+
+  blockquote{
+    border-left: 6px solid var(--ifm-color-primary);
+    background-color: var(--ifm-code-background);
+    color: var(--ifm-font-base-color);
+  }
