--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -8,13 +8,15 @@
     --ifm-color-primary-light: #ea734b;
     --ifm-color-primary-lighter: #ed825f;
     --ifm-color-primary-lightest: #ef9273;
-    --ifm-code-background: #F0EAE4;
+    --ifm-code-background: #FDF4C3;
+    --ifm-blockquote-background: #fffceb;
   }
 
   html[data-theme='dark'] {
     --ifm-background-color: #1f2227;
     --ifm-background-surface-color: #33363b;
     --ifm-code-background: #5652B1;
+    --ifm-blockquote-background: #770087;
   }
 
 
@@ -32,6 +34,6 @@
 
   blockquote{
     border-left: 6px solid var(--ifm-color-primary);
-    background-color: var(--ifm-code-background);
+    background-color: var(--ifm-blockquote-background);
     color: var(--ifm-font-base-color);
   }
