--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -43,3 +43,7 @@
     box-shadow: 0 3px 5px 0 rgba(0,0,0,0.15);
     border: 1px solid rgba(0,0,0,0.15);
   }
+
+  a code{
+    text-decoration: underline;
+  }
