wip: app development

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,49 +1,55 @@
 /* your custom css */
 
 :root {
-    --ifm-color-primary: #e86337;
-    --ifm-color-primary-dark: #d15932;
-    --ifm-color-primary-darker: #ba4f2c;
-    --ifm-color-primary-darkest: #a24527;
-    --ifm-color-primary-light: #ea734b;
-    --ifm-color-primary-lighter: #ed825f;
-    --ifm-color-primary-lightest: #ef9273;
-    --ifm-code-background: #FDF4C3;
-    --ifm-blockquote-background: #fffceb;
-  }
+  --ifm-color-primary: #e86337;
+  --ifm-color-primary-dark: #d15932;
+  --ifm-color-primary-darker: #ba4f2c;
+  --ifm-color-primary-darkest: #a24527;
+  --ifm-color-primary-light: #ea734b;
+  --ifm-color-primary-lighter: #ed825f;
+  --ifm-color-primary-lightest: #ef9273;
+  --ifm-code-background: #fdf4c3;
+  --ifm-blockquote-background: #fffceb;
+}
 
-  html[data-theme='dark'] {
-    --ifm-background-color: #1f2227;
-    --ifm-background-surface-color: #33363b;
-    --ifm-code-background: #5652B1;
-    --ifm-blockquote-background: #770087;
-  }
+html[data-theme="dark"] {
+  --ifm-background-color: #1f2227;
+  --ifm-background-surface-color: #33363b;
+  --ifm-code-background: #5652b1;
+  --ifm-blockquote-background: #770087;
+}
 
+@media screen and (max-width: 996px) {
+  :root {
+    --ifm-font-size-base: 15px;
+  }
+}
 
-  @media screen and (max-width: 996px) {
-    :root {
-      --ifm-font-size-base: 15px;
-    }
+@media screen and (min-width: 997px) {
+  :root {
+    --ifm-font-size-base: 17px;
   }
-  
-  @media screen and (min-width: 997px) {
-    :root {
-      --ifm-font-size-base: 17px;
-    }
-  }
+}
 
-  blockquote{
-    border-left: 6px solid var(--ifm-color-primary);
-    background-color: var(--ifm-blockquote-background);
-    color: var(--ifm-font-base-color);
-  }
+blockquote {
+  border-left: 6px solid var(--ifm-color-primary);
+  background-color: var(--ifm-blockquote-background);
+  color: var(--ifm-font-base-color);
+}
 
-  .container img{
-    border-radius: 5px;
-    box-shadow: 0 3px 5px 0 rgba(0,0,0,0.15);
-    border: 1px solid rgba(0,0,0,0.15);
-  }
+.container img {
+  border-radius: 5px;
+  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.15);
+  border: 1px solid rgba(0, 0, 0, 0.15);
+}
 
-  a code{
-    text-decoration: underline;
-  }
+a code {
+  text-decoration: underline;
+}
+
+.docusaurus-highlight-code-line {
+  background-color: #770087;
+  display: block;
+  margin: 0 calc(-1 * var(--ifm-pre-padding));
+  padding: 0 var(--ifm-pre-padding);
+}
