feat: add `admonition` styles

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -53,3 +53,79 @@ a code {
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+.admonition {
+  border: none;
+  border-radius: 0px;
+  border-left: 6px solid;
+
+  --success-color: #155724;
+  --success-bg-color: #d4edda;
+
+  --secondary-color: #383d41;
+  --secondary-bg-color: #e2e3e5;
+
+  --info-color: #004085;
+  --info-bg-color: #cce5ff;
+
+  --danger-color: #721c24;
+  --danger-bg-color: #f8d7da;
+
+  --warning-color: #856404;
+  --warning-bg-color: #fff3cd;
+}
+
+.admonition.admonition-note.alert.alert--secondary {
+  color: var(--secondary-color);
+  background-color: var(--secondary-bg-color);
+  border-color: var(--secondary-color);
+}
+
+.admonition.admonition-note.alert.alert--secondary .admonition-icon svg {
+  fill: var(--secondary-color);
+  stroke: var(--secondary-color);
+}
+
+.admonition.admonition-tip.alert.alert--success {
+  color: var(--success-color);
+  background-color: var(--success-bg-color);
+  border-color: var(--success-color);
+}
+
+.admonition.admonition-tip.alert.alert--success .admonition-icon svg {
+  fill: var(--success-color);
+  stroke: var(--success-color);
+}
+
+.admonition.admonition-info.alert.alert--info {
+  color: var(--info-color);
+  background-color: var(--info-bg-color);
+  border-color: var(--info-color);
+}
+
+.admonition.admonition-info.alert.alert--info .admonition-icon svg {
+  fill: var(--info-color);
+  stroke: var(--info-color);
+}
+
+.admonition.admonition-danger.alert.alert--danger {
+  color: var(--danger-color);
+  background-color: var(--danger-bg-color);
+  border-color: var(--danger-color);
+}
+
+.admonition.admonition-danger.alert.alert--danger .admonition-icon svg {
+  fill: var(--danger-color);
+  stroke: var(--danger-color);
+}
+
+.admonition.admonition-caution.alert.alert--warning {
+  color: var(--warning-color);
+  background-color: var(--warning-bg-color);
+  border-color: var(--warning-color);
+}
+
+.admonition.admonition-caution.alert.alert--warning .admonition-icon svg {
+  fill: var(--warning-color);
+  stroke: var(--warning-color);
+}
