Implemented Theme UI MDX components.

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -12,6 +12,23 @@
   --ifm-blockquote-background: #fffceb;
 }
 
+html {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+pre,
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+p {
+  line-height: 1.7em;
+}
+
 html[data-theme="dark"] {
   --ifm-background-color: #1f2227;
   --ifm-background-surface-color: #33363b;
@@ -132,4 +149,25 @@ a code {
 
 .alert a {
   color: inherit;
+}
+
+.markdown hr {
+  display: block;
+  unicode-bidi: isolate;
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+  margin-inline-start: auto;
+  margin-inline-end: auto;
+  overflow: hidden;
+  border-style: inset;
+  border-width: 1px;
+  margin: 25px auto 15px auto;
+  width: 100%;
+  border-top: none;
+  box-shadow: none;
+  border-color: var(--ifm-toc-border-color);
+}
+
+.markdown button {
+  cursor: pointer;
 }
