--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -171,3 +171,18 @@ a code {
 .markdown button {
   cursor: pointer;
 }
+
+/* youtube video fix */
+.markdown .video-responsive {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0;
+}
+.markdown .video-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
