feat: add `no-shadow` class to remove shadow on images

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -61,6 +61,12 @@ blockquote {
   border: 1px solid rgba(0, 0, 0, 0.15);
 }
 
+.container img.no-shadow {
+  border-radius: 5px;
+  box-shadow: initial;
+  border: initial;
+}
+
 a code {
   text-decoration: underline;
 }
