feat: add `hidden` class

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,5 +1,9 @@
 /* your custom css */
 
+.hidden {
+  display: none;
+}
+
 :root {
   --ifm-color-primary: #e86337;
   --ifm-color-primary-dark: #d15932;
