--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -198,3 +198,19 @@ a code {
   width: 100%;
   position: absolute;
 }
+
+diagram-letter {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background: #282c34;
+  color: white;
+  border-radius: 50%;
+  width: 18px;
+  height: 18px;
+  text-align: center;
+  vertical-align: middle;
+  font-weight: bolder;
+  font-size: 11px;
+  text-transform: uppercase;
+}
