--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -199,6 +199,10 @@ a code {
   position: absolute;
 }
 
+.markdown table {
+  font-size: 0.85em;
+}
+
 diagram-letter {
   display: inline-flex;
   align-items: center;
