--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -65,10 +65,17 @@ blockquote {
   border: 1px solid rgba(0, 0, 0, 0.15);
 }
 
-.container img.no-shadow {
+.container img.no-shadow,
+.container svg.no-shadow {
   border-radius: 5px;
   box-shadow: initial;
   border: initial;
+}
+
+.container img.full-width,
+.container svg.full-width {
+  width: 100%;
+  height: 100%; /* needed for svg images */
 }
 
 a code {
